# calx

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.MIT  README.md  common.c  common.h  compare.h  cstringify.sh  dasm.c  dasm.h  dict.c  dict.h  fancy.c  fancy.h  hash.h  ht.c  ht.h  lexer.c  lexer.h  list.h  main.c  ntp.c  ntp.h  number.c  number.h  parse.c  parse.h  position.h  prompt.c  prompt.h  stdlib.calx  str.c  str.h  text_manip.c  text_manip.h  vm.c  vm.h  wref.h  (+2 more)
tests/: runner
tests/E_aop_kinderr/: prog.calx
tests/E_badesc/: prog.calx
tests/E_call_nargs/: prog.calx
tests/E_cmp3way/: prog.calx
tests/E_len/: prog.calx
tests/E_loadat_dict/: prog.calx
tests/E_loadat_list/: prog.calx
tests/E_loadat_num/: prog.calx
tests/E_loadat_str/: prog.calx
tests/E_modifyat_1/: prog.calx
tests/E_modifyat_2/: prog.calx
tests/E_modifyat_3/: prog.calx
tests/E_modifyglobal_1/: prog.calx
tests/E_modifyglobal_2/: prog.calx
tests/E_modifylocal/: prog.calx
tests/E_negate/: prog.calx
tests/E_newdict/: prog.calx
tests/E_storeat/: prog.calx
tests/add_sub/: output  prog.calx  prog.py
tests/bf_interp/: prog.calx
tests/bit_ops/: output  prog.calx
tests/concat/: output  prog.calx
tests/cyclicref/: output  prog.calx
tests/decode/: output  prog.calx
tests/dict/: output  prog.calx
tests/div_long/: output  prog.calx
tests/div_short/: output  prog.calx
tests/encode/: output  prog.bc  prog.calx
tests/escapes/: output  prog.calx
tests/fib_recurs/: prog.calx
tests/forloop/: output  prog.calx  prog.py
tests/gather/: output  (+1 more)
(+22 files in other folders)
